cluster/apps/reloader/networkpolicies/prometheus-egress-reloader.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-reloader
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: reloader
            app.kubernetes.io/instance: "reloader"
            "k8s:io.kubernetes.pod.namespace": reloader
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
